--- a/package.json
+++ b/package.json
@@ -14,8 +14,15 @@
 	"devDependencies": {
 		"@sveltejs/adapter-auto": "next",
 		"@sveltejs/kit": "next",
+		"@threlte/core": "^5.0.7",
+		"@threlte/extras": "^4.8.0",
+		"@threlte/preprocess": "^0.0.2",
+		"@threlte/rapier": "^0.5.0",
+		"@threlte/theatre": "^0.0.2",
+		"@types/three": "^0.146.0",
 		"@typescript-eslint/eslint-plugin": "^5.45.0",
 		"@typescript-eslint/parser": "^5.45.0",
+		"@yushijinhun/three-minifier-rollup": "^0.4.0",
 		"eslint": "^8.28.0",
 		"eslint-config-prettier": "^8.5.0",
 		"eslint-plugin-svelte3": "^4.0.0",
@@ -23,6 +30,9 @@
 		"prettier-plugin-svelte": "^2.8.1",
 		"svelte": "^3.54.0",
 		"svelte-check": "^2.9.2",
+		"svelte-meta-tags": "^2.6.4",
+		"svelte-sequential-preprocessor": "^0.0.7",
+		"three": "^0.147.0",
 		"tslib": "^2.4.1",
 		"typescript": "^4.9.3",
 		"vite": "^4.0.0"
